<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lookInsideTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/look_inside_title"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/lookInsideBackButton"
        android:layout_width="@dimen/menu_button_width"
        android:layout_height="@dimen/menu_button_height"
        android:layout_marginBottom="16dp"
        android:onClick="toHome"
        android:text="@string/back_button_text"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="305dp"
        android:layout_height="321dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="84dp"
        app:layout_constraintBottom_toTopOf="@+id/lookInsideBackButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lookInsideTitle"
        app:layout_constraintVertical_bias="1.0">

        <RadioButton
            android:id="@+id/topShelfRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/top_shelf_radio" />

        <RadioButton
            android:id="@+id/middleShelfRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/middle_shelf_radio" />

        <RadioButton
            android:id="@+id/bottomSelfRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bottom_shelf_radio" />

        <RadioButton
            android:id="@+id/drawer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drawer" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>