<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9EBED"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/homeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/homescreen_title"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/whatsInFridgeButton"
        android:layout_width="@dimen/menu_button_width"
        android:layout_height="@dimen/menu_button_height"
        android:layout_marginBottom="12dp"
        android:background="@drawable/blue_button"
        android:onClick="toWhatsInFridge"
        android:text="@string/whats_in_fridge_home_button"
        android:textAllCaps="false"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/shoppingButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/orderOnlineButton"
        android:layout_width="@dimen/menu_button_width"
        android:layout_height="@dimen/menu_button_height"
        android:layout_marginBottom="12dp"
        android:background="@drawable/blue_button"
        android:onClick="toOrderOnline"
        android:text="@string/order_online_home_button"
        android:textAllCaps="false"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/lookInsideButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/shoppingButton"
        android:layout_width="@dimen/menu_button_width"
        android:layout_height="@dimen/menu_button_height"
        android:layout_marginBottom="12dp"
        android:background="@drawable/green_button"
        android:onClick="toShopping"
        android:text="@string/shopping_home_button"
        android:textAllCaps="false"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/orderOnlineButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/lookInsideButton"
        android:layout_width="@dimen/menu_button_width"
        android:layout_height="@dimen/menu_button_height"
        android:layout_marginBottom="16dp"
        android:background="@drawable/green_button"
        android:onClick="toLookInside"
        android:text="@string/look_inside_home_button"
        android:textAllCaps="false"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/homeTemperatureLayout"
        android:layout_width="@dimen/temperature_width"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/whatsInFridgeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeTitle">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temperature_label"
            android:textAlignment="center"
            android:textSize="@dimen/normal_text_size" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:text="@string/temperature_far"
            android:textAlignment="center"
            android:textSize="@dimen/extreme_text_size"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/homeTempBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="18" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>