<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/safeModeDialogLayout"
    android:layout_width="@dimen/create_password_dialog_width"
    android:layout_height="@dimen/create_password_dialog_height"
    android:background="@android:drawable/dialog_holo_light_frame">

    <TextView
        android:id="@+id/setPasswordConfirmLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_password_confirm_label"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/setPasswordConfirmField"
        app:layout_constraintStart_toStartOf="@+id/setPasswordLabel"
        app:layout_constraintTop_toTopOf="@+id/setPasswordConfirmField" />

    <TextView
        android:id="@+id/setPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/create_password_create_title"
        android:textAlignment="center"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/setPasswordField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintEnd_toEndOf="@+id/setPasswordTitle"
        app:layout_constraintStart_toEndOf="@+id/setPasswordLabel"
        app:layout_constraintTop_toBottomOf="@+id/setPasswordTitle"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/setPasswordConfirmField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintEnd_toEndOf="@+id/setPasswordTitle"
        app:layout_constraintStart_toStartOf="@+id/setPasswordField"
        app:layout_constraintTop_toBottomOf="@+id/setPasswordField"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/setPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_password_input_label"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/setPasswordField"
        app:layout_constraintStart_toStartOf="@+id/setPasswordTitle"
        app:layout_constraintTop_toTopOf="@+id/setPasswordField" />

    <TextView
        android:id="@+id/setPasswordWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/create_password_mismatch"
        android:textColor="@color/red"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintBottom_toTopOf="@+id/createPasswordButtonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/createPasswordButtonLayout"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/setPasswordTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/setPasswordTitle">

        <Button
            android:id="@+id/setPasswordBackButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/blue_button"
            android:text="@string/back_button_text"
            android:textAllCaps="false"
            android:textSize="@dimen/normal_text_size" />

        <Space
            android:id="@+id/setPasswordSpace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1" />

        <Button
            android:id="@+id/setPasswordButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/green_button"
            android:text="@string/create_password_set_button"
            android:textAllCaps="false"
            android:textSize="@dimen/normal_text_size" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>