<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/enterPasswordDialogLayout"
    android:layout_width="@dimen/enter_password_dialog_width"
    android:layout_height="@dimen/enter_password_dialog_height"
    android:background="@android:drawable/dialog_holo_light_frame">

    <TextView
        android:id="@+id/enterPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/enter_password_title"
        android:textSize="@dimen/normal_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterPasswordField"
        android:layout_width="@dimen/enter_password_field_width"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintBottom_toTopOf="@+id/enterPasswordWarning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPasswordTitle"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/enterPasswordWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_password_incorrect"
        android:textColor="@color/red"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintBottom_toTopOf="@+id/enterPasswordButtonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/enterPasswordButtonLayout"
        android:layout_width="@dimen/enter_password_field_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/enterPasswordBackButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back_button_text"
            android:textAllCaps="false"
            android:textSize="@dimen/normal_text_size" />

        <Button
            android:id="@+id/enterPasswordContinueButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enter_password_continue_button"
            android:textAllCaps="false"
            android:textSize="@dimen/normal_text_size" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>